[package]
name = "async-wechat"
version = "1.0.3"
description = "Wechat SDK for Rust"
authors = ["cleveng <cleveng@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/cleveng/wechat.git"
rust-version = "1.85.0"

[dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
reqwest = { version = "0.12.8", features = ["json"] }
async-trait = "0.1.88"
deadpool-redis = { version = "0.20.0", features = ["serde"] }
redis = { version = "0.29.5", default-features = false, features = [] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
quick-xml = { version = "0.37.4", features = ["serialize"] }
sha1 = "0.10.6"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15.0"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]

[features]
default = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
